Rewrite of the BaseMapper and add ConnectionContext for handling connection also add some unit tests